# org-id

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/org_id/: __init__.py  identifiers.py  model.py  refresh.py  registry.py  validators.py
src/org_id/data/: download.json
tests/: test_identifiers.py  test_registry.py
